--- a/lotto-game/package.json
+++ b/lotto-game/package.json
@@ -8,7 +8,8 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-scripts": "^5.0.1",
-    "react-transition-group": "^4.4.5"
+    "react-transition-group": "^4.4.5",
+    "typescript": "^4.9.5"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -39,7 +40,6 @@
   "devDependencies": {
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
-    "gh-pages": "^6.2.0",
-    "typescript": "^5.6.3"
+    "gh-pages": "^6.2.0"
   }
 }
